# -Building-a-Secure-Web-Application

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PYTHON_PROJECT_STRUCTURE.md  README.md  __init__.py  app.py  config.py  docker-compose.yml  models.py  pyproject.toml  pyvenv.cfg  requirements.txt  setup.py  test_app.py  utils.py
.github/workflows/: python-app.yml
instance/: secure_app.db
static/css/: custom.css
static/js/: security.js
templates/: base.html  dashboard.html  error.html  index.html  login.html  register.html  security_demo.html
tests/: __init__.py  test_security.py
