[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "building-secure-web-application"
version = "1.0.0"
description = "A comprehensive Flask-based secure web application demonstrating cybersecurity principles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Harit Suthar", email = "your.email@example.com"}
]
keywords = [
    "flask",
    "security", 
    "web-application",
    "authentication",
    "authorization",
    "jwt",
    "oauth",
    "csrf",
    "cybersecurity",
    "education"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Environment :: Web Environment",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.3",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-WTF>=1.2.1",
    "PyJWT>=2.8.0",
    "Werkzeug>=3.0.3",
    "WTForms>=3.1.1",
    "Authlib>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/haritsuthar/-Building-a-Secure-Web-Application"
Repository = "https://github.com/haritsuthar/-Building-a-Secure-Web-Application"
Issues = "https://github.com/haritsuthar/-Building-a-Secure-Web-Application/issues"
Documentation = "https://github.com/haritsuthar/-Building-a-Secure-Web-Application#readme"

[project.scripts]
secure-web-app = "app:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests", "test_app.py"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true